[gd_scene load_steps=15 format=3 uid="uid://63ldnrmfgqc1"]

[ext_resource type="Script" path="res://ene_dyn/ene_dyn_esqueleto.gd" id="1_smm7i"]
[ext_resource type="Texture2D" uid="uid://yoe5fabdy8m7" path="res://ene_dyn/img/esqueleto.png" id="2_0pqmv"]
[ext_resource type="AudioStream" uid="uid://dcjjimya6l5fy" path="res://ene_status/efectoDano.mp3" id="3_xth21"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3bfc3"]
atlas = ExtResource("2_0pqmv")
region = Rect2(0, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_qycth"]
atlas = ExtResource("2_0pqmv")
region = Rect2(160, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lykpc"]
atlas = ExtResource("2_0pqmv")
region = Rect2(320, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e6wb"]
atlas = ExtResource("2_0pqmv")
region = Rect2(480, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3wxw"]
atlas = ExtResource("2_0pqmv")
region = Rect2(640, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t3ou"]
atlas = ExtResource("2_0pqmv")
region = Rect2(800, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_02sg6"]
atlas = ExtResource("2_0pqmv")
region = Rect2(960, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2q10"]
atlas = ExtResource("2_0pqmv")
region = Rect2(1120, 160, 160, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_mpowt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bfc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qycth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lykpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e6wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3wxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t3ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02sg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2q10")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmxs1"]
size = Vector2(24, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcoik"]
size = Vector2(42, 73)

[node name="EneDynEsqueleto" type="CharacterBody2D"]
position = Vector2(132, 173)
script = ExtResource("1_smm7i")
metadata/_edit_group_ = true

[node name="ani_esqueleto" type="AnimatedSprite2D" parent="."]
position = Vector2(499, 321)
sprite_frames = SubResource("SpriteFrames_mpowt")

[node name="col_esqueleto" type="CollisionShape2D" parent="."]
position = Vector2(502, 329)
shape = SubResource("RectangleShape2D_cmxs1")

[node name="audio_perderVida" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xth21")

[node name="one_area" type="Area2D" parent="."]

[node name="col_esqueleto_ataque" type="CollisionShape2D" parent="one_area"]
position = Vector2(500, 326.5)
shape = SubResource("RectangleShape2D_fcoik")

[node name="detectorIzquierda" type="RayCast2D" parent="one_area"]
position = Vector2(479, 322)
target_position = Vector2(0, 59)

[node name="detectorIDerecha" type="RayCast2D" parent="one_area"]
position = Vector2(521, 322)
target_position = Vector2(0, 60)

[connection signal="body_entered" from="one_area" to="." method="_on_ene_area_body_entered"]
